--- a/asset/style/layout.css
+++ b/asset/style/layout.css
@@ -554,6 +554,21 @@ main section:first-child {
     margin-top: 20px;
 }
 
+.form-create form #errortitle,
+.form-create form #errorimg,
+.form-create form #errorcontent {
+    color: red;
+    font-size: 18px;
+    text-align: start !important;
+}
+
+.form-create form #charCount {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    color: #A1A1AA;
+}
+
 
 /*Footer*/
 
