--- a/asset/style/layout.css
+++ b/asset/style/layout.css
@@ -225,7 +225,7 @@ nav ul li a:hover {
 
 
 /*Creact Post Link*/
-.creact-new-post {
+.create-new-post {
     position: fixed;
     bottom: 30px;
     right: 30px;
