--- a/asset/style/layout.css
+++ b/asset/style/layout.css
@@ -225,14 +225,14 @@ nav ul li a:hover {
 
 
 /*Creact Post Link*/
-.create-new-post {
+.create-new-post a {
     position: fixed;
     bottom: 30px;
     right: 30px;
     border: none;
     border-radius: 100px;
     width: 60px;
-    height: 60px;
+    line-height: 60px;
     background-color: var(--secondary-200);
     box-shadow: 0px 12px 24px -6px #181a2a1f;
 }
