--- a/asset/style/layout.css
+++ b/asset/style/layout.css
@@ -225,16 +225,20 @@ nav ul li a:hover {
 
 
 /*Creact Post Link*/
-.create-new-post a {
+.create-new-post {
     position: fixed;
     bottom: 30px;
     right: 30px;
     border: none;
+    width: 50px;
+    height: 50px;
     border-radius: 100px;
-    width: 60px;
-    line-height: 60px;
     background-color: var(--secondary-200);
     box-shadow: 0px 12px 24px -6px #181a2a1f;
+}
+
+.create-new-post a {
+    font-size: 25px;
 }
 
 
