--- a/asset/style/media-screen.css
+++ b/asset/style/media-screen.css
@@ -27,7 +27,7 @@
 @media (max-width: 1400px) {
 
 	/*Clean Br*/
-	br {
+	.form-introduce br {
 		content: "";
 	}
 }
@@ -506,6 +506,16 @@
 
 	.form-create form {
 		width: 100% !important;
+	}
+
+	/*Main Author Page*/
+	.text br {
+		content: "";
+	}
+
+	.section-first {
+		padding: 20px !important;
+		margin-bottom: 20px;
 	}
 
 	/*Footer*/
